--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "axios": "^0.27.2",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "sass": "^1.55.0"
   }
 }
